<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_main_top"
        android:layout_width="match_parent"
...
                    <LinearLayout
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_main_docs_type_1"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@drawable/main_button"
                            android:stateListAnimator="@null"
                            android:clickable="true"
...
                            android:text="@string/main_docs_type_1"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            app:cornerRadius="12dp" />

                        <Button
                            android:id="@+id/button_main_docs_type_2"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/main_button"
                            android:clickable="true"
...
                            android:text="@string/main_docs_type_2"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:cornerRadius="12dp" />

                        <Button
                            android:id="@+id/button_main_docs_type_3"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/main_button"
                            android:stateListAnimator="@null"
...
                            android:text="@string/main_docs_type_3"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:cornerRadius="12dp" />

                        <Button
                            android:id="@+id/button_main_docs_type_4"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/main_button"
                            android:stateListAnimator="@null"
...
                <RelativeLayout
                    android:id="@+id/relativelayout_main_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageview_main_top"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/gradient_main"
                        android:importantForAccessibility="no" />

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewpager_main_carousel"
                        android:layout_width="320dp"
                        android:layout_height="160dp"
                        android:layout_below="@+id/imageview_main_top"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:id="@+id/textview_main_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/koho_bold"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                    <ImageButton
                        android:id="@+id/image_button_main_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="60dp"
                        android:clickable="true"
...
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@null"
                        android:importantForAccessibility="no"
                        android:src="@drawable/search" />

                    <ImageButton
                        android:id="@+id/image_button_main_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="20dp"
                        android:clickable="true"
...
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id='@+id/swiperefreshlayout_main'
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_view_main_top">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_main_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:scrollbarFadeDuration="0"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
